--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -1,4 +1,4 @@
-register.inputFirstName=First Name
+register.inputFirstName=First Name*
 register.inputNamePlaceholder=Must have at least 3 characters
 register.properFirstNameFormat=John
 register.inputLastName=Last Name
