--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -1,15 +1,34 @@
+register.title=Register
 register.inputFirstName=First Name*
 register.inputNamePlaceholder=Must have at least 3 characters
 register.properFirstNameFormat=John
-register.inputLastName=Last Name
+register.inputLastName=Last Name*
 register.properLastNameFormat=Luck
-register.inputDateOfBirth=Select date of birth
-register.inputPhoneNumber=Phone number
+register.inputDateOfBirth=Select date of birth*
+register.inputPhoneNumber=Phone number*
 register.inputPhoneNumberPlaceholder=+375-29-333-00-13
-register.inputEmail=Email
+register.inputEmail=Email*
 register.inputEmailPlaceholder=example@gmail.com
-register.inputPassword=Password
+register.inputPassword=Password*
 register.inputPasswordPlaceholder=Must have at least 6 characters
-register.inputRepeatedPassword=Repeat password
+register.inputRepeatedPassword=Repeat password*
 
 button.completeRegister=Register
+button.login=Login
+
+login.title=Login
+login.inputEmail=Email
+login.inputPassword=Password
+
+header.home=Home
+header.vacancy=Vacancy
+header.register=Register
+header.login=Login
+header.logout=Logout
+header.admin=Admin
+header.changeLanguage=Russian Language
+header.title=Header
+
+home.title=Home
+
+vacancy.title=Vacancy
