--- a/src/main/resources/locale/page_content_ru_RU.properties
+++ b/src/main/resources/locale/page_content_ru_RU.properties
@@ -1,15 +1,36 @@
-register.inputFirstName=\u0418\u043C\u044F
+register.title=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F
+register.inputFirstName=\u0418\u043C\u044F*
 register.inputNamePlaceholder=\u0414\u043E\u043B\u0436\u043D\u043E \u0431\u044B\u0442\u044C \u043C\u0438\u043D\u0438\u043C\u0443\u043C 3 \u0441\u0438\u043C\u0432\u043E\u043B\u0430
 register.properFirstNameFormat=\u0418\u0432\u0430\u043D
-register.inputLastName=\u0424\u0430\u043C\u0438\u043B\u0438\u044F
+register.inputLastName=\u0424\u0430\u043C\u0438\u043B\u0438\u044F*
 register.properLastNameFormat=\u0418\u0432\u0430\u043D\u043E\u0432
-register.inputDateOfBirth=\u0423\u043A\u0430\u0436\u0438\u0442\u0435 \u0434\u0430\u0442\u0443 \u0440\u043E\u0436\u0434\u0435\u043D\u0438\u044F
-register.inputPhoneNumber=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u043D\u043E\u043C\u0435\u0440 \u0442\u0435\u043B\u0435\u0444\u043E\u043D\u0430
+register.inputDateOfBirth=\u0423\u043A\u0430\u0436\u0438\u0442\u0435 \u0434\u0430\u0442\u0443 \u0440\u043E\u0436\u0434\u0435\u043D\u0438\u044F*
+register.inputPhoneNumber=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u043D\u043E\u043C\u0435\u0440 \u0442\u0435\u043B\u0435\u0444\u043E\u043D\u0430*
 register.inputPhoneNumberPlaceholder=+375-29-333-00-13
-register.inputEmail=\u0423\u043A\u0430\u0436\u0438\u0442\u0435 \u043F\u043E\u0447\u0442\u0443
+register.inputEmail=\u0423\u043A\u0430\u0436\u0438\u0442\u0435 \u044D\u043B\u0435\u043A\u0442\u0440\u043E\u043D\u043D\u0443\u044E \u043F\u043E\u0447\u0442\u0443*
 register.inputEmailPlaceholder=\u043F\u0440\u0438\u043C\u0435\u0440@gmail.com
-register.inputPassword=\u041F\u0440\u0438\u0434\u0443\u043C\u0430\u0439\u0442\u0435 \u043F\u0430\u0440\u043E\u043B\u044C
+register.inputPassword=\u041F\u0440\u0438\u0434\u0443\u043C\u0430\u0439\u0442\u0435 \u043F\u0430\u0440\u043E\u043B\u044C*
 register.inputPasswordPlaceholder=\u0414\u043E\u043B\u0436\u043D\u043E \u0431\u044B\u0442\u044C \u043C\u0438\u043D\u0438\u043C\u0443\u043C 6 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432
-register.inputRepeatedPassword=\u041F\u043E\u0432\u0442\u043E\u0440\u0438\u0442\u0435 \u043F\u0430\u0440\u043E\u043B\u044C
+register.inputRepeatedPassword=\u041F\u043E\u0432\u0442\u043E\u0440\u0438\u0442\u0435 \u043F\u0430\u0440\u043E\u043B\u044C*
 
 button.completeRegister=\u0417\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u0442\u044C\u0441\u044F
+button.login=\u0412\u043E\u0439\u0442\u0438
+
+login.title=\u0412\u0445\u043E\u0434 \u0432 \u0430\u043A\u043A\u0430\u0443\u043D\u0442
+login.inputEmail=\u042D\u043B\u0435\u043A\u0442\u0440\u043E\u043D\u043D\u0430\u044F \u043F\u043E\u0447\u0442\u0430
+login.inputPassword=\u041F\u0430\u0440\u043E\u043B\u044C
+
+header.home=\u0413\u043B\u0430\u0432\u043D\u0430\u044F
+header.vacancy=\u0412\u0430\u043A\u0430\u043D\u0441\u0438\u0438
+header.register=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F
+header.login=\u0410\u0432\u0442\u043E\u0440\u0438\u0437\u0430\u0446\u0438\u044F
+header.logout=\u0412\u044B\u0439\u0442\u0438
+header.admin=\u0410\u0434\u043C\u0438\u043D
+header.changeLanguage=\u0410\u043D\u0433\u043B\u0438\u0439\u0441\u043A\u0438\u0439 \u044F\u0437\u044B\u043A
+
+
+header.title=\u0417\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A
+
+vacancy.title=\u0412\u0430\u043A\u0430\u043D\u0441\u0438\u0438
+
+home.title=\u0413\u043B\u0430\u0432\u043D\u0430\u044F
