--- a/src/main/resources/locale/page_content_ru_RU.properties
+++ b/src/main/resources/locale/page_content_ru_RU.properties
@@ -34,3 +34,5 @@ header.title=\u0417\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A
 vacancy.title=\u0412\u0430\u043A\u0430\u043D\u0441\u0438\u0438
 
 home.title=\u0413\u043B\u0430\u0432\u043D\u0430\u044F
+
+vacancy_info.title=\u0412\u0430\u043A\u0430\u043D\u0441\u0438\u044F
