add vacancy create jsp

--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -15,6 +15,9 @@ register.inputRepeatedPassword=Repeat password*
 
 button.completeRegister=Register
 button.login=Login
+button.createVacancy=Create vacancy
+button.create=Create
+button.close=Close
 
 login.title=Login
 login.inputEmail=Email
@@ -32,6 +35,16 @@ header.title=Header
 home.title=Home
 
 vacancy.title=Vacancies
-
 vacancy_info.title=Vacancy
 
+profile.title=Profile
+
+create_vacancy_modal.title=Vacancy creation
+create_vacancy_modal.inputPosition=Input vacancy position
+create_vacancy_modal.inputPositionPlaceholder=Must have less than 1000 characters
+create_vacancy_modal.inputDescription=Input vacancy description
+create_vacancy_modal.inputDescriptionPlaceholder=Must have less than 3000 characters
+create_vacancy_modal.inputCountry=Input country
+create_vacancy_modal.inputCountryPlaceholder=Must have less than 100 characters
+create_vacancy_modal.inputCity=Input city
+create_vacancy_modal.inputCityPlaceholder=Must have less than 100 characters
