--- a/src/main/resources/locale/page_content_ru_RU.properties
+++ b/src/main/resources/locale/page_content_ru_RU.properties
@@ -15,6 +15,9 @@ register.inputRepeatedPassword=\u041F\u043E\u0432\u0442\u043E\u0440\u0438\u0442\
 
 button.completeRegister=\u0417\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u0442\u044C\u0441\u044F
 button.login=\u0412\u043E\u0439\u0442\u0438
+button.createVacancy=\u0421\u043E\u0437\u0434\u0430\u0442\u044C \u0432\u0430\u043A\u0430\u043D\u0441\u0438\u044E
+button.create=\u0421\u043E\u0437\u0434\u0430\u0442\u044C
+button.close=\u0417\u0430\u043A\u0440\u044B\u0442\u044C
 
 login.title=\u0412\u0445\u043E\u0434 \u0432 \u0430\u043A\u043A\u0430\u0443\u043D\u0442
 login.inputEmail=\u042D\u043B\u0435\u043A\u0442\u0440\u043E\u043D\u043D\u0430\u044F \u043F\u043E\u0447\u0442\u0430
@@ -37,3 +40,14 @@ home.title=\u0413\u043B\u0430\u0432\u043D\u0430\u044F
 
 vacancy_info.title=\u0412\u0430\u043A\u0430\u043D\u0441\u0438\u044F
 
+profile.title=\u041F\u0440\u043E\u0444\u0438\u043B\u044C
+
+create_vacancy_modal.title=\u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435 \u0432\u0430\u043A\u0430\u043D\u0441\u0438\u0438
+create_vacancy_modal.inputPosition=\u0423\u043A\u0430\u0436\u0438\u0442\u0435 \u0434\u043E\u043B\u0436\u043D\u043E\u0441\u0442\u044C \u0432\u0430\u043A\u0430\u043D\u0441\u0438\u0438
+create_vacancy_modal.inputPositionPlaceholder=\u0414\u043E\u043B\u0436\u043D\u043E \u0431\u044B\u0442\u044C \u043D\u0435 \u0431\u043E\u043B\u0435\u0435 1000 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432
+create_vacancy_modal.inputDescription=\u041D\u0430\u043F\u0438\u0448\u0438\u0442\u0435 \u043E\u043F\u0438\u0441\u0430\u043D\u0438\u0435 \u0432\u0430\u043A\u0430\u043D\u0441\u0438\u0438
+create_vacancy_modal.inputDescriptionPlaceholder=\u0414\u043E\u043B\u0436\u043D\u043E \u0431\u044B\u0442\u044C \u043D\u0435 \u0431\u043E\u043B\u0435\u0435 3000 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432
+create_vacancy_modal.inputCountry=\u0423\u043A\u0430\u0436\u0438\u0442\u0435 \u0441\u0442\u0440\u0430\u043D\u0443
+create_vacancy_modal.inputCountryPlaceholder=\u0414\u043E\u043B\u0436\u043D\u043E \u0431\u044B\u0442\u044C \u043D\u0435 \u0431\u043E\u043B\u0435\u0435 100 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432
+create_vacancy_modal.inputCity=\u0423\u043A\u0430\u0436\u0438\u0442\u0435 \u0433\u043E\u0440\u043E\u0434
+create_vacancy_modal.inputCityPlaceholder=\u0414\u043E\u043B\u0436\u043D\u043E \u0431\u044B\u0442\u044C \u043D\u0435 \u0431\u043E\u043B\u0435\u0435 100 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432
