add vacancy find function

--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -18,6 +18,7 @@ button.login=Login
 button.createVacancy=Create vacancy
 button.create=Create
 button.close=Close
+button.find=Find
 
 login.title=Login
 login.inputEmail=Email
@@ -36,6 +37,7 @@ home.title=Home
 
 vacancy.title=Vacancies
 vacancy_info.title=Vacancy
+vacancy.inputKeyWord=Find by key word
 
 profile.title=Profile
 
