add vacancy sort function

--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -19,6 +19,9 @@ button.createVacancy=Create vacancy
 button.create=Create
 button.close=Close
 button.find=Find
+button.sortByDate=Sort by date
+button.sortAsc=ASC
+button.sortDesc=DESC
 
 login.title=Login
 login.inputEmail=Email
