add admin function

--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -22,6 +22,7 @@ button.find=Find
 button.sortByDate=Sort by date
 button.sortAsc=ASC
 button.sortDesc=DESC
+button.seeAllVacancies=All vacancies
 
 login.title=Login
 login.inputEmail=Email
@@ -41,6 +42,7 @@ home.title=Home
 vacancy.title=Vacancies
 vacancy_info.title=Vacancy
 vacancy.inputKeyWord=Find by key word
+vacancy_vacanciesAmount=Vacancies amount:
 
 profile.title=Profile
 
