add new features

--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -34,7 +34,9 @@ header.register=Register
 header.login=Login
 header.logout=Logout
 header.admin=Admin
-header.changeLanguage=Russian Language
+header.changeLanguage=Language
+header.russianLanguage= Russian
+header.englishLanguage= English
 header.title=Header
 
 home.title=Home
@@ -45,6 +47,10 @@ vacancy.inputKeyWord=Find by key word
 vacancy_vacanciesAmount=Vacancies amount:
 
 profile.title=Profile
+
+user.employeeVacancies=My vacancies
+user.profile=Profile
+user.requests=My requests
 
 create_vacancy_modal.title=Vacancy creation
 create_vacancy_modal.inputPosition=Input vacancy position
