--- a/src/main/resources/locale/page_content_ru_RU.properties
+++ b/src/main/resources/locale/page_content_ru_RU.properties
@@ -34,8 +34,10 @@ header.vacancy=\u0412\u0430\u043A\u0430\u043D\u0441\u0438\u0438
 header.register=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F
 header.login=\u0410\u0432\u0442\u043E\u0440\u0438\u0437\u0430\u0446\u0438\u044F
 header.logout=\u0412\u044B\u0439\u0442\u0438
-header.admin=\u0410\u0434\u043C\u0438\u043D
-header.changeLanguage=\u0410\u043D\u0433\u043B\u0438\u0439\u0441\u043A\u0438\u0439 \u044F\u0437\u044B\u043A
+header.admin=\u0410\u0434\u043C\u0438\u043D\u0438\u0441\u0442\u0440\u0430\u0442\u043E\u0440
+header.changeLanguage=\u042F\u0437\u044B\u043A
+header.russianLanguage=\u0420\u0443\u0441\u0441\u043A\u0438\u0439
+header.englishLanguage=\u0410\u043D\u0433\u043B\u0438\u0439\u0441\u043A\u0438\u0439
 
 
 header.title=\u0417\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A
@@ -47,6 +49,10 @@ vacancy.inputKeyWord=\u041D\u0430\u0439\u0442\u0438 \u043F\u043E \u043A\u043B\u0
 vacancy_vacanciesAmount=\u041A\u043E\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E \u0432\u0430\u043A\u0430\u043D\u0441\u0438\u0439:
 
 profile.title=\u041F\u0440\u043E\u0444\u0438\u043B\u044C
+
+user.profile=\u041F\u0440\u043E\u0444\u0438\u043B\u044C
+user.requests=\u041C\u043E\u0438 \u0437\u0430\u044F\u0432\u043A\u0438
+user.employeeVacancies=\u041C\u043E\u0438 \u0432\u0430\u043A\u0430\u043D\u0441\u0438\u0438
 
 create_vacancy_modal.title=\u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435 \u0432\u0430\u043A\u0430\u043D\u0441\u0438\u0438
 create_vacancy_modal.inputPosition=\u0423\u043A\u0430\u0436\u0438\u0442\u0435 \u0434\u043E\u043B\u0436\u043D\u043E\u0441\u0442\u044C \u0432\u0430\u043A\u0430\u043D\u0441\u0438\u0438
