--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -23,6 +23,8 @@ button.sortByDate=Sort by date
 button.sortAsc=ASC
 button.sortDesc=DESC
 button.seeAllVacancies=All vacancies
+button.delete=Delete
+button.restore=Restore
 
 login.title=Login
 login.inputEmail=Email
@@ -45,6 +47,10 @@ vacancy.title=Vacancies
 vacancy_info.title=Vacancy
 vacancy.inputKeyWord=Find by key word
 vacancy_vacanciesAmount=Vacancies amount:
+vacancy_position = Vacancy Position
+vacancy_description = Vacancy Description
+vacancy_country = Country
+vacancy_city = City
 
 profile.title=Profile
 
