--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -25,6 +25,7 @@ button.sortDesc=DESC
 button.seeAllVacancies=All vacancies
 button.delete=Delete
 button.restore=Restore
+button.createVacancyRequest=Apply
 
 login.title=Login
 login.inputEmail=Email
@@ -62,8 +63,11 @@ create_vacancy_modal.title=Vacancy creation
 create_vacancy_modal.inputPosition=Input vacancy position
 create_vacancy_modal.inputPositionPlaceholder=Must have less than 1000 characters
 create_vacancy_modal.inputDescription=Input vacancy description
-create_vacancy_modal.inputDescriptionPlaceholder=Must have less than 3000 characters
+create_vacancy_modal.inputDescriptionPlaceholder=Must have less than 10000 characters
 create_vacancy_modal.inputCountry=Input country
 create_vacancy_modal.inputCountryPlaceholder=Must have less than 100 characters
 create_vacancy_modal.inputCity=Input city
 create_vacancy_modal.inputCityPlaceholder=Must have less than 100 characters
+
+create_vacancy_request.inputSummary=Write summary
+create_vacancy_request.inputSummaryPlaceholder=Must have less than 10000 characters
