--- a/src/main/resources/locale/page_content_ru_RU.properties
+++ b/src/main/resources/locale/page_content_ru_RU.properties
@@ -25,6 +25,7 @@ button.sortDesc=\u041F\u043E \u0443\u0431\u044B\u0432\u0430\u043D\u0438\u044E
 button.seeAllVacancies=\u0412\u0441\u0435 \u0432\u0430\u043A\u0430\u043D\u0441\u0438\u0438
 button.delete=\u0423\u0434\u0430\u043B\u0438\u0442\u044C
 button.restore=\u0412\u043E\u0441\u0441\u0442\u0430\u043D\u043E\u0432\u0438\u0442\u044C
+button.createVacancyRequest=\u041E\u0442\u043A\u043B\u0438\u043A\u043D\u0443\u0442\u044C\u0441\u044F
 
 
 login.title=\u0412\u0445\u043E\u0434 \u0432 \u0430\u043A\u043A\u0430\u0443\u043D\u0442
@@ -64,8 +65,11 @@ create_vacancy_modal.title=\u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435 \u04
 create_vacancy_modal.inputPosition=\u0423\u043A\u0430\u0436\u0438\u0442\u0435 \u043F\u043E\u0437\u0438\u0446\u0438\u044E \u0432\u0430\u043A\u0430\u043D\u0441\u0438\u0438
 create_vacancy_modal.inputPositionPlaceholder=\u0414\u043E\u043B\u0436\u043D\u043E \u0431\u044B\u0442\u044C \u043D\u0435 \u0431\u043E\u043B\u0435\u0435 1000 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432
 create_vacancy_modal.inputDescription=\u041D\u0430\u043F\u0438\u0448\u0438\u0442\u0435 \u043E\u043F\u0438\u0441\u0430\u043D\u0438\u0435 \u0432\u0430\u043A\u0430\u043D\u0441\u0438\u0438
-create_vacancy_modal.inputDescriptionPlaceholder=\u0414\u043E\u043B\u0436\u043D\u043E \u0431\u044B\u0442\u044C \u043D\u0435 \u0431\u043E\u043B\u0435\u0435 3000 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432
+create_vacancy_modal.inputDescriptionPlaceholder=\u0414\u043E\u043B\u0436\u043D\u043E \u0431\u044B\u0442\u044C \u043D\u0435 \u0431\u043E\u043B\u0435\u0435 10000 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432
 create_vacancy_modal.inputCountry=\u0423\u043A\u0430\u0436\u0438\u0442\u0435 \u0441\u0442\u0440\u0430\u043D\u0443
 create_vacancy_modal.inputCountryPlaceholder=\u0414\u043E\u043B\u0436\u043D\u043E \u0431\u044B\u0442\u044C \u043D\u0435 \u0431\u043E\u043B\u0435\u0435 100 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432
 create_vacancy_modal.inputCity=\u0423\u043A\u0430\u0436\u0438\u0442\u0435 \u0433\u043E\u0440\u043E\u0434
 create_vacancy_modal.inputCityPlaceholder=\u0414\u043E\u043B\u0436\u043D\u043E \u0431\u044B\u0442\u044C \u043D\u0435 \u0431\u043E\u043B\u0435\u0435 100 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432
+
+create_vacancy_request.inputSummary=\u041D\u0430\u043F\u0438\u0448\u0438\u0442\u0435 \u0440\u0435\u0437\u044E\u043C\u0435
+create_vacancy_request.inputSummaryPlaceholder=\u0414\u043E\u043B\u0436\u043D\u043E \u0431\u044B\u0442\u044C \u043D\u0435 \u0431\u043E\u043B\u0435\u0435 10000 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432
