--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -1,16 +1,14 @@
 register.title=Register
 register.inputFirstName=First Name*
-register.inputNamePlaceholder=Must have at least 3 characters
-register.properFirstNameFormat=John
+register.inputNamePlaceholder=At least 3 characters
 register.inputLastName=Last Name*
-register.properLastNameFormat=Luck
 register.inputDateOfBirth=Select date of birth*
 register.inputPhoneNumber=Phone number*
 register.inputPhoneNumberPlaceholder=+375-29-333-00-13
 register.inputEmail=Email*
 register.inputEmailPlaceholder=example@gmail.com
 register.inputPassword=Password*
-register.inputPasswordPlaceholder=Must have at least 6 characters
+register.inputPasswordPlaceholder=At least 6 characters
 register.inputRepeatedPassword=Repeat password*
 
 button.completeRegister=Register
