--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -41,6 +41,12 @@ header.englishLanguage= English
 header.title=Header
 
 home.title=Home
+home.seeVacanciesMessage=See vacancies
+home.registerAndApplyVacanciesMessage=Register and apply vacancies
+home.getJobMessage=Get job offer and work with us
+home.firstSlideName =Step #1
+home.secondSlideName =Step #2
+home.thirdSlideName =Step #3
 
 vacancy.title=Vacancies
 vacancy_info.title=Vacancy
