--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -16,7 +16,7 @@ button.login=Login
 button.createVacancy=Create vacancy
 button.create=Create
 button.close=Close
-button.find=Find
+button.find=Search
 button.sortByDate=Sort by date
 button.sortAsc=ASC
 button.sortDesc=DESC
