--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -18,8 +18,8 @@ button.create=Create
 button.close=Close
 button.find=Search
 button.sortByDate=Sort by date
-button.sortAsc=ASC
-button.sortDesc=DESC
+button.sortAsc=Asc
+button.sortDesc=Desc
 button.seeAllVacancies=All vacancies
 button.delete=Delete
 button.restore=Restore
