--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -16,7 +16,7 @@ button.login=Login
 button.createVacancy=Create vacancy
 button.create=Create
 button.close=Close
-button.find=Search
+button.find=Search (
 button.sortByDate=Sort by date
 button.sortAsc=Asc
 button.sortDesc=Desc
@@ -50,7 +50,7 @@ home.thirdSlideName =Step #3
 
 vacancy.title=Vacancies
 vacancy_info.title=Vacancy
-vacancy.inputKeyWord=Find by key word
+vacancy.inputKeyWord=Search (Empty field will show all vacancies)
 vacancy_vacanciesAmount=Vacancies amount:
 vacancy_position = Vacancy Position
 vacancy_description = Vacancy Description
