--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -50,12 +50,13 @@ home.thirdSlideName =Step #3
 
 vacancy.title=Vacancies
 vacancy_info.title=Vacancy
-vacancy.inputKeyWord=Search (Empty field will show all vacancies)
+vacancy.inputKeyWord=Search (empty field will show all vacancies)
 vacancy_vacanciesAmount=Vacancies amount:
-vacancy_position = Vacancy Position
-vacancy_description = Vacancy Description
-vacancy_country = Country
-vacancy_city = City
+vacancy_position =Vacancy Position
+vacancy_description =Vacancy Description
+vacancy_country =Country
+vacancy_city =City
+vacancy_creationDate=Creation date
 
 profile.title=Profile
 
