--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -16,7 +16,7 @@ button.login=Login
 button.createVacancy=Create vacancy
 button.create=Create
 button.close=Close
-button.find=Search (
+button.find=Search
 button.sortByDate=Sort by date
 button.sortAsc=Asc
 button.sortDesc=Desc
@@ -76,3 +76,7 @@ create_vacancy_modal.inputCityPlaceholder=Must have less than 100 characters
 
 create_vacancy_request.inputSummary=Write summary
 create_vacancy_request.inputSummaryPlaceholder=Must have less than 10000 characters
+
+table_action=Action
+
+link.moreInfo=More information
