--- a/src/main/resources/locale/page_content_ru_RU.properties
+++ b/src/main/resources/locale/page_content_ru_RU.properties
@@ -79,3 +79,7 @@ create_vacancy_modal.inputCityPlaceholder=\u0414\u043E\u043B\u0436\u043D\u043E \
 
 create_vacancy_request.inputSummary=\u041D\u0430\u043F\u0438\u0448\u0438\u0442\u0435 \u0440\u0435\u0437\u044E\u043C\u0435
 create_vacancy_request.inputSummaryPlaceholder=\u0414\u043E\u043B\u0436\u043D\u043E \u0431\u044B\u0442\u044C \u043D\u0435 \u0431\u043E\u043B\u0435\u0435 10000 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432
+
+table_action=\u0414\u0435\u0439\u0441\u0442\u0432\u0438\u0435
+
+link.moreInfo=\u041F\u043E\u0434\u0440\u043E\u0431\u043D\u0435\u0435
