add button and fix bugs

--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -50,7 +50,7 @@ home.thirdSlideName =Step #3
 
 vacancy.title=Vacancies
 vacancy_info.title=Vacancy
-vacancy.inputKeyWord=Search (empty field will show all vacancies)
+vacancy.inputKeyWord=Search
 vacancy_vacanciesAmount=Vacancies amount:
 vacancy_position =Vacancy Position
 vacancy_description =Vacancy Description
