add new features

--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -24,6 +24,8 @@ button.seeAllVacancies=All vacancies
 button.delete=Delete
 button.restore=Restore
 button.createVacancyRequest=Apply
+button.seeActiveVacancies=Active vacancies
+button.seeDeletedVacancies=Deleted vacancies
 
 login.title=Login
 login.inputEmail=Email
@@ -80,3 +82,5 @@ create_vacancy_request.inputSummaryPlaceholder=Must have less than 10000 charact
 table_action=Action
 
 link.moreInfo=More information
+
+employee_vacancy_list.title=My vacancies
