--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -26,6 +26,10 @@ button.restore=Restore
 button.createVacancyRequest=Apply
 button.seeActiveVacancies=Active vacancies
 button.seeDeletedVacancies=Deleted vacancies
+button.seeVacanciesWithApplicantsRequests=Vacancies with requests
+button.seeVacanciesWithActiveApplicantsRequests=With active requests
+button.seeVacanciesWithNotActiveApplicantsRequests=With not active requests
+button.seeVacanciesWithBothActiveApplicantsRequests=With both
 
 login.title=Login
 login.inputEmail=Email
