--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -27,8 +27,8 @@ button.createVacancyRequest=Apply
 button.seeActiveVacancies=Active vacancies
 button.seeDeletedVacancies=Deleted vacancies
 button.seeVacanciesWithApplicantsRequests=Vacancies with requests
-button.seeVacanciesWithActiveApplicantsRequests=With active requests
-button.seeVacanciesWithNotActiveApplicantsRequests=With not active requests
+button.seeVacanciesWithActiveApplicantsRequests=With active
+button.seeVacanciesWithNotActiveApplicantsRequests=With not active
 button.seeVacanciesWithBothActiveApplicantsRequests=With both
 
 login.title=Login
