--- a/src/main/resources/locale/page_content_ru_RU.properties
+++ b/src/main/resources/locale/page_content_ru_RU.properties
@@ -29,7 +29,7 @@ button.seeDeletedVacancies=\u041D\u0435\u0430\u043A\u0442\u0438\u0432\u043D\u044
 button.seeVacanciesWithApplicantsRequests=\u0412\u0430\u043A\u0430\u043D\u0441\u0438\u0438 \u0441 \u0437\u0430\u044F\u0432\u043A\u0430\u043C\u0438
 button.seeVacanciesWithActiveApplicantsRequests=\u0421 \u0430\u043A\u0442\u0438\u0432\u043D\u044B\u043C\u0438
 button.seeVacanciesWithNotActiveApplicantsRequests=\u0421 \u043D\u0435\u0430\u043A\u0442\u0438\u0432\u043D\u044B\u043C\u0438
-button.seeVacanciesWithBothActiveApplicantsRequests=\u0421\u043E \u0432\u0441\u0435\u043C\u0438
+button.seeVacanciesWithBothActiveApplicantsRequests=\u0412\u0441\u0435
 
 
 login.title=\u0412\u0445\u043E\u0434 \u0432 \u0430\u043A\u043A\u0430\u0443\u043D\u0442
