add new feature

--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -30,6 +30,8 @@ button.seeVacanciesWithApplicantsRequests=Vacancies with requests
 button.seeVacanciesWithActiveApplicantsRequests=With active
 button.seeVacanciesWithNotActiveApplicantsRequests=With not active
 button.seeVacanciesWithBothActiveApplicantsRequests=With both
+button.action=Action
+button.edit=Edit
 
 login.title=Login
 login.inputEmail=Email
@@ -63,6 +65,7 @@ vacancy_description =Vacancy Description
 vacancy_country =Country
 vacancy_city =City
 vacancy_creationDate=Creation date
+vacancy_deleted=(Deleted)
 
 profile.title=Profile
 
