--- a/src/main/resources/locale/page_content_ru_RU.properties
+++ b/src/main/resources/locale/page_content_ru_RU.properties
@@ -30,6 +30,8 @@ button.seeVacanciesWithApplicantsRequests=\u0412\u0430\u043A\u0430\u043D\u0441\u
 button.seeVacanciesWithActiveApplicantsRequests=\u0421 \u0430\u043A\u0442\u0438\u0432\u043D\u044B\u043C\u0438
 button.seeVacanciesWithNotActiveApplicantsRequests=\u0421 \u043D\u0435\u0430\u043A\u0442\u0438\u0432\u043D\u044B\u043C\u0438
 button.seeVacanciesWithBothActiveApplicantsRequests=\u0412\u0441\u0435
+button.action=\u0414\u0435\u0439\u0441\u0442\u0432\u0438\u0435
+button.edit=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C
 
 
 login.title=\u0412\u0445\u043E\u0434 \u0432 \u0430\u043A\u043A\u0430\u0443\u043D\u0442
@@ -66,6 +68,7 @@ vacancy_description = \u041E\u043F\u0438\u0441\u0430\u043D\u0438\u0435 \u0432\u0
 vacancy_country = \u0421\u0442\u0440\u0430\u043D\u0430
 vacancy_city = \u0413\u043E\u0440\u043E\u0434
 vacancy_creationDate=\u0414\u0430\u0442\u0430 \u0441\u043E\u0437\u0434\u0430\u043D\u0438\u044F
+vacancy_deleted=(\u043D\u0435\u0430\u043A\u0442\u0438\u0432\u043D\u0430\u044F)
 
 profile.title=\u041F\u0440\u043E\u0444\u0438\u043B\u044C
 
