--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -65,7 +65,7 @@ vacancy_description =Vacancy Description
 vacancy_country =Country
 vacancy_city =City
 vacancy_creationDate=Creation date
-vacancy_deleted=(Deleted)
+vacancy_deleted=(deleted)
 
 profile.title=Profile
 
