--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -32,6 +32,7 @@ button.seeVacanciesWithNotActiveApplicantsRequests=With not active
 button.seeVacanciesWithBothActiveApplicantsRequests=With both
 button.action=Action
 button.edit=Edit
+button.back=Back
 
 login.title=Login
 login.inputEmail=Email
