--- a/src/main/resources/locale/page_content_ru_RU.properties
+++ b/src/main/resources/locale/page_content_ru_RU.properties
@@ -32,6 +32,7 @@ button.seeVacanciesWithNotActiveApplicantsRequests=\u0421 \u043D\u0435\u0430\u04
 button.seeVacanciesWithBothActiveApplicantsRequests=\u0412\u0441\u0435
 button.action=\u0414\u0435\u0439\u0441\u0442\u0432\u0438\u0435
 button.edit=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C
+button.back=\u041D\u0430\u0437\u0430\u0434
 
 
 login.title=\u0412\u0445\u043E\u0434 \u0432 \u0430\u043A\u043A\u0430\u0443\u043D\u0442
