add 404 error page

--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -33,6 +33,7 @@ button.seeVacanciesWithBothActiveApplicantsRequests=With both
 button.action=Action
 button.edit=Edit
 button.back=Back
+button.home=Home
 
 login.title=Login
 login.inputEmail=Email
@@ -92,3 +93,6 @@ table_action=Action
 link.moreInfo=More information
 
 employee_vacancy_list.title=My vacancies
+
+404_error.title=404 error
+404_error.message=404 page not found
