add new feature

--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -96,3 +96,6 @@ employee_vacancy_list.title=My vacancies
 
 404_error.title=404 error
 404_error.message=404 page not found
+
+500_error.title=500 error
+500_error.message=internal server error
