add vacancy edit

--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -34,6 +34,7 @@ button.action=Action
 button.edit=Edit
 button.back=Back
 button.home=Home
+button.save=Save
 
 login.title=Login
 login.inputEmail=Email
