--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -23,7 +23,7 @@ button.sortDesc=Desc
 button.seeAllVacancies=All vacancies
 button.delete=Delete
 button.restore=Restore
-button.createVacancyRequest=Apply
+button.createApplicantRequest=Apply
 button.seeActiveVacancies=Active vacancies
 button.seeDeletedVacancies=Deleted vacancies
 button.seeVacanciesWithApplicantsRequests=Vacancies with requests
@@ -86,8 +86,10 @@ create_vacancy_modal.inputCountryPlaceholder=Must have less than 100 characters
 create_vacancy_modal.inputCity=Input city
 create_vacancy_modal.inputCityPlaceholder=Must have less than 100 characters
 
-create_vacancy_request.inputSummary=Write summary
-create_vacancy_request.inputSummaryPlaceholder=Must have less than 10000 characters
+create_applicant_request.inputSummary=Write about yourself
+create_applicant_request.inputSummaryPlaceholder=Must have less than 10000 characters
+
+applicant_request.request=Request
 
 table_action=Action
 
