--- a/src/main/resources/locale/page_content_ru_RU.properties
+++ b/src/main/resources/locale/page_content_ru_RU.properties
@@ -23,7 +23,7 @@ button.sortDesc=\u0421\u043D\u0430\u0447\u0430\u043B\u0430 \u043D\u043E\u0432\u0
 button.seeAllVacancies=\u0412\u0441\u0435 \u0432\u0430\u043A\u0430\u043D\u0441\u0438\u0438
 button.delete=\u0423\u0434\u0430\u043B\u0438\u0442\u044C
 button.restore=\u0412\u043E\u0441\u0441\u0442\u0430\u043D\u043E\u0432\u0438\u0442\u044C
-button.createVacancyRequest=\u041E\u0442\u043A\u043B\u0438\u043A\u043D\u0443\u0442\u044C\u0441\u044F
+button.createApplicantRequest=\u041E\u0442\u043A\u043B\u0438\u043A\u043D\u0443\u0442\u044C\u0441\u044F
 button.seeActiveVacancies=\u0410\u043A\u0442\u0438\u0432\u043D\u044B\u0435 \u0432\u0430\u043A\u0430\u043D\u0441\u0438\u0438
 button.seeDeletedVacancies=\u041D\u0435\u0430\u043A\u0442\u0438\u0432\u043D\u044B\u0435 \u0432\u0430\u043A\u0430\u043D\u0441\u0438\u0438
 button.seeVacanciesWithApplicantsRequests=\u0412\u0430\u043A\u0430\u043D\u0441\u0438\u0438 \u0441 \u0437\u0430\u044F\u0432\u043A\u0430\u043C\u0438
@@ -89,8 +89,10 @@ create_vacancy_modal.inputCountryPlaceholder=\u0414\u043E\u043B\u0436\u043D\u043
 create_vacancy_modal.inputCity=\u0423\u043A\u0430\u0436\u0438\u0442\u0435 \u0433\u043E\u0440\u043E\u0434
 create_vacancy_modal.inputCityPlaceholder=\u0414\u043E\u043B\u0436\u043D\u043E \u0431\u044B\u0442\u044C \u043D\u0435 \u0431\u043E\u043B\u0435\u0435 100 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432
 
-create_vacancy_request.inputSummary=\u041D\u0430\u043F\u0438\u0448\u0438\u0442\u0435 \u0440\u0435\u0437\u044E\u043C\u0435
-create_vacancy_request.inputSummaryPlaceholder=\u0414\u043E\u043B\u0436\u043D\u043E \u0431\u044B\u0442\u044C \u043D\u0435 \u0431\u043E\u043B\u0435\u0435 10000 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432
+create_applicant_request.inputSummary=\u041D\u0430\u043F\u0438\u0448\u0438 \u043F\u0430\u0440\u0443 \u0441\u043B\u043E\u0432 \u043E \u0441\u0435\u0431\u0435
+create_applicant_request.inputSummaryPlaceholder=\u0414\u043E\u043B\u0436\u043D\u043E \u0431\u044B\u0442\u044C \u043D\u0435 \u0431\u043E\u043B\u0435\u0435 10000 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432
+
+applicant_request.request=\u0417\u0430\u044F\u0432\u043A\u0430
 
 table_action=\u0414\u0435\u0439\u0441\u0442\u0432\u0438\u0435
 
