add new feature

--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -71,22 +71,28 @@ vacancy_creationDate=Creation date
 vacancy_deleted=(deleted)
 
 profile.title=Profile
+profile.firstName=First Name
+profile.lastName=Last Name
+profile.dateOfBirth=Date of birth
+profile.phoneNumber=Phone number
+profile.email=Email
+profile.editInfoTitle=Edit user info
 
 user.employeeVacancies=My vacancies
 user.profile=Profile
 user.requests=My requests
 
 create_vacancy_modal.title=Vacancy creation
-create_vacancy_modal.inputPosition=Input vacancy position
+create_vacancy_modal.inputPosition=Input vacancy position*
 create_vacancy_modal.inputPositionPlaceholder=Must have less than 1000 characters
-create_vacancy_modal.inputDescription=Input vacancy description
+create_vacancy_modal.inputDescription=Input vacancy description*
 create_vacancy_modal.inputDescriptionPlaceholder=Must have less than 10000 characters
-create_vacancy_modal.inputCountry=Input country
+create_vacancy_modal.inputCountry=Input country*
 create_vacancy_modal.inputCountryPlaceholder=Must have less than 100 characters
-create_vacancy_modal.inputCity=Input city
+create_vacancy_modal.inputCity=Input city*
 create_vacancy_modal.inputCityPlaceholder=Must have less than 100 characters
 
-create_applicant_request.inputSummary=Write about yourself
+create_applicant_request.inputSummary=Write about yourself*
 create_applicant_request.inputSummaryPlaceholder=Must have less than 10000 characters
 
 applicant_request.request=Request
