--- a/src/main/resources/locale/page_content_ru_RU.properties
+++ b/src/main/resources/locale/page_content_ru_RU.properties
@@ -74,22 +74,28 @@ vacancy_creationDate=\u0414\u0430\u0442\u0430 \u0441\u043E\u0437\u0434\u0430\u04
 vacancy_deleted=(\u043D\u0435\u0430\u043A\u0442\u0438\u0432\u043D\u0430\u044F)
 
 profile.title=\u041F\u0440\u043E\u0444\u0438\u043B\u044C
+profile.firstName=\u0418\u043C\u044F
+profile.lastName=\u0424\u0430\u043C\u0438\u043B\u0438\u044F
+profile.dateOfBirth=\u0414\u0430\u0442\u0430 \u0440\u043E\u0436\u0434\u0435\u043D\u0438\u044F
+profile.phoneNumber=\u041D\u043E\u043C\u0435\u0440 \u0442\u0435\u043B\u0435\u0444\u043E\u043D\u0430
+profile.email=\u042D\u043B\u0435\u043A\u0442\u0440\u043E\u043D\u043D\u0430\u044F \u043F\u043E\u0447\u0442\u0430
+profile.editInfoTitle=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435 \u043F\u0440\u043E\u0444\u0438\u043B\u044F
 
 user.profile=\u041F\u0440\u043E\u0444\u0438\u043B\u044C
 user.requests=\u041C\u043E\u0438 \u0437\u0430\u044F\u0432\u043A\u0438
 user.employeeVacancies=\u041C\u043E\u0438 \u0432\u0430\u043A\u0430\u043D\u0441\u0438\u0438
 
 create_vacancy_modal.title=\u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435 \u0432\u0430\u043A\u0430\u043D\u0441\u0438\u0438
-create_vacancy_modal.inputPosition=\u0423\u043A\u0430\u0436\u0438\u0442\u0435 \u043F\u043E\u0437\u0438\u0446\u0438\u044E \u0432\u0430\u043A\u0430\u043D\u0441\u0438\u0438
+create_vacancy_modal.inputPosition=\u0423\u043A\u0430\u0436\u0438\u0442\u0435 \u043F\u043E\u0437\u0438\u0446\u0438\u044E \u0432\u0430\u043A\u0430\u043D\u0441\u0438\u0438*
 create_vacancy_modal.inputPositionPlaceholder=\u0414\u043E\u043B\u0436\u043D\u043E \u0431\u044B\u0442\u044C \u043D\u0435 \u0431\u043E\u043B\u0435\u0435 1000 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432
-create_vacancy_modal.inputDescription=\u041D\u0430\u043F\u0438\u0448\u0438\u0442\u0435 \u043E\u043F\u0438\u0441\u0430\u043D\u0438\u0435 \u0432\u0430\u043A\u0430\u043D\u0441\u0438\u0438
+create_vacancy_modal.inputDescription=\u041D\u0430\u043F\u0438\u0448\u0438\u0442\u0435 \u043E\u043F\u0438\u0441\u0430\u043D\u0438\u0435 \u0432\u0430\u043A\u0430\u043D\u0441\u0438\u0438*
 create_vacancy_modal.inputDescriptionPlaceholder=\u0414\u043E\u043B\u0436\u043D\u043E \u0431\u044B\u0442\u044C \u043D\u0435 \u0431\u043E\u043B\u0435\u0435 10000 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432
-create_vacancy_modal.inputCountry=\u0423\u043A\u0430\u0436\u0438\u0442\u0435 \u0441\u0442\u0440\u0430\u043D\u0443
+create_vacancy_modal.inputCountry=\u0423\u043A\u0430\u0436\u0438\u0442\u0435 \u0441\u0442\u0440\u0430\u043D\u0443*
 create_vacancy_modal.inputCountryPlaceholder=\u0414\u043E\u043B\u0436\u043D\u043E \u0431\u044B\u0442\u044C \u043D\u0435 \u0431\u043E\u043B\u0435\u0435 100 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432
-create_vacancy_modal.inputCity=\u0423\u043A\u0430\u0436\u0438\u0442\u0435 \u0433\u043E\u0440\u043E\u0434
+create_vacancy_modal.inputCity=\u0423\u043A\u0430\u0436\u0438\u0442\u0435 \u0433\u043E\u0440\u043E\u0434*
 create_vacancy_modal.inputCityPlaceholder=\u0414\u043E\u043B\u0436\u043D\u043E \u0431\u044B\u0442\u044C \u043D\u0435 \u0431\u043E\u043B\u0435\u0435 100 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432
 
-create_applicant_request.inputSummary=\u041D\u0430\u043F\u0438\u0448\u0438 \u043F\u0430\u0440\u0443 \u0441\u043B\u043E\u0432 \u043E \u0441\u0435\u0431\u0435
+create_applicant_request.inputSummary=\u041D\u0430\u043F\u0438\u0448\u0438 \u043F\u0430\u0440\u0443 \u0441\u043B\u043E\u0432 \u043E \u0441\u0435\u0431\u0435*
 create_applicant_request.inputSummaryPlaceholder=\u0414\u043E\u043B\u0436\u043D\u043E \u0431\u044B\u0442\u044C \u043D\u0435 \u0431\u043E\u043B\u0435\u0435 10000 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432
 
 applicant_request.request=\u0417\u0430\u044F\u0432\u043A\u0430
