add new feature

--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -96,6 +96,8 @@ create_applicant_request.inputSummary=Write about yourself*
 create_applicant_request.inputSummaryPlaceholder=Must have less than 10000 characters
 
 applicant_request.request=Request
+applicant_request.applicantState=Applicant state
+applicant_request.requestsAmount=Requests amount
 
 table_action=Action
 
