add new feature

--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -95,6 +95,7 @@ create_vacancy_modal.inputCityPlaceholder=Must have less than 100 characters
 create_applicant_request.inputSummary=Write about yourself*
 create_applicant_request.inputSummaryPlaceholder=Must have less than 10000 characters
 
+applicant_request.title=My requests
 applicant_request.request=Request
 applicant_request.applicantState=Applicant state
 applicant_request.requestsAmount=Requests amount
