--- a/src/main/resources/locale/page_content_ru_RU.properties
+++ b/src/main/resources/locale/page_content_ru_RU.properties
@@ -98,9 +98,10 @@ create_vacancy_modal.inputCityPlaceholder=\u0414\u043E\u043B\u0436\u043D\u043E \
 create_applicant_request.inputSummary=\u041D\u0430\u043F\u0438\u0448\u0438 \u043F\u0430\u0440\u0443 \u0441\u043B\u043E\u0432 \u043E \u0441\u0435\u0431\u0435*
 create_applicant_request.inputSummaryPlaceholder=\u0414\u043E\u043B\u0436\u043D\u043E \u0431\u044B\u0442\u044C \u043D\u0435 \u0431\u043E\u043B\u0435\u0435 10000 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432
 
+applicant_request.title=\u041C\u043E\u0438 \u0437\u0430\u044F\u0432\u043A\u0438
 applicant_request.request=\u0417\u0430\u044F\u0432\u043A\u0430
 applicant_request.applicantState=\u0421\u0442\u0430\u0442\u0443\u0441 \u0441\u043E\u0438\u0441\u043A\u0430\u0442\u0435\u043B\u044F
-applicant_request.requestsAmount=\u041A\u043E\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E \u0437\u0430\u043F\u0440\u043E\u0441\u043E\u0432:
+applicant_request.requestsAmount=\u041A\u043E\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E \u0437\u0430\u044F\u0432\u043E\u043A:
 
 table_action=\u0414\u0435\u0439\u0441\u0442\u0432\u0438\u0435
 
