add new feature

--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -100,6 +100,10 @@ applicant_request.request=Request
 applicant_request.applicantState=Applicant state
 applicant_request.requestsAmount=Requests amount
 
+employee_applicant_request.title=Applicant request
+employee_applicant_request.requestNotActiveValue=(not active)
+employee_applicant_request.applicantSummary=Summary
+
 table_action=Action
 
 link.moreInfo=More information
