--- a/src/main/resources/locale/page_content_ru_RU.properties
+++ b/src/main/resources/locale/page_content_ru_RU.properties
@@ -103,6 +103,10 @@ applicant_request.request=\u0417\u0430\u044F\u0432\u043A\u0430
 applicant_request.applicantState=\u0421\u0442\u0430\u0442\u0443\u0441 \u0441\u043E\u0438\u0441\u043A\u0430\u0442\u0435\u043B\u044F
 applicant_request.requestsAmount=\u041A\u043E\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E \u0437\u0430\u044F\u0432\u043E\u043A:
 
+employee_applicant_request.title=\u0417\u0430\u044F\u0432\u043A\u0430 \u0441\u043E\u0438\u0441\u043A\u0430\u0442\u0435\u043B\u044F
+employee_applicant_request.requestNotActiveValue=(\u043E\u0431\u0440\u0430\u0431\u043E\u0442\u0430\u043D\u0430)
+employee_applicant_request.applicantSummary=\u0420\u0435\u0437\u044E\u043C\u0435
+
 table_action=\u0414\u0435\u0439\u0441\u0442\u0432\u0438\u0435
 
 link.moreInfo=\u041F\u043E\u0434\u0440\u043E\u0431\u043D\u0435\u0435
