--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -103,6 +103,10 @@ applicant_request.requestsAmount=Requests amount
 employee_applicant_request.title=Applicant request
 employee_applicant_request.requestNotActiveValue=(not active)
 employee_applicant_request.applicantSummary=Summary
+employee_applicant_request.applicantInterviewResults=Interview results
+employee_applicant_request.basicInterviewName=Basic interview
+employee_applicant_request.technicalInterviewName=Technical interview
+employee_applicant_request.interviewResultRating=Rating:
 
 table_action=Action
 
