--- a/src/main/resources/locale/page_content_ru_RU.properties
+++ b/src/main/resources/locale/page_content_ru_RU.properties
@@ -106,6 +106,10 @@ applicant_request.requestsAmount=\u041A\u043E\u043B\u0438\u0447\u0435\u0441\u044
 employee_applicant_request.title=\u0417\u0430\u044F\u0432\u043A\u0430 \u0441\u043E\u0438\u0441\u043A\u0430\u0442\u0435\u043B\u044F
 employee_applicant_request.requestNotActiveValue=(\u043E\u0431\u0440\u0430\u0431\u043E\u0442\u0430\u043D\u0430)
 employee_applicant_request.applicantSummary=\u0420\u0435\u0437\u044E\u043C\u0435
+employee_applicant_request.applicantInterviewResults=\u0420\u0435\u0437\u0443\u043B\u044C\u0442\u0430\u0442\u044B \u0438\u043D\u0442\u0435\u0440\u0432\u044C\u044E
+employee_applicant_request.basicInterviewName=\u041F\u0440\u0435\u0434\u0432\u0430\u0440\u0438\u0442\u0435\u043B\u044C\u043D\u043E\u0435 \u0438\u043D\u0442\u0435\u0440\u0432\u044C\u044E
+employee_applicant_request.technicalInterviewName=\u0422\u0435\u0445\u043D\u0438\u0447\u0435\u0441\u043A\u043E\u0435 \u0438\u043D\u0442\u0435\u0440\u0432\u044C\u044E
+employee_applicant_request.interviewResultRating=\u0420\u0435\u0439\u0442\u0438\u043D\u0433:
 
 table_action=\u0414\u0435\u0439\u0441\u0442\u0432\u0438\u0435
 
