--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -101,7 +101,7 @@ applicant_request.applicantState=Applicant state
 applicant_request.requestsAmount=Requests amount
 
 employee_applicant_request.title=Applicant request
-employee_applicant_request.requestNotActiveValue=(not active)
+employee_applicant_request.requestNotActiveValue=(processed)
 employee_applicant_request.applicantSummary=Summary
 employee_applicant_request.applicantInterviewResults=Interview results
 employee_applicant_request.basicInterviewName=Basic interview
