--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -117,5 +117,8 @@ employee_vacancy_list.title=My vacancies
 404_error.title=404 error
 404_error.message=404 page not found
 
+405_error.title=405 error
+405_error.message=method not allowed
+
 500_error.title=500 error
 500_error.message=internal server error
