--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -35,6 +35,7 @@ button.edit=Edit
 button.back=Back
 button.home=Home
 button.save=Save
+button.upload=Upload
 
 login.title=Login
 login.inputEmail=Email
@@ -77,6 +78,7 @@ profile.dateOfBirth=Date of birth
 profile.phoneNumber=Phone number
 profile.email=Email
 profile.editInfoTitle=Edit user info
+profile.avatar=Avatar
 
 user.employeeVacancies=My vacancies
 user.profile=Profile
