--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -100,7 +100,7 @@ create_applicant_request.inputSummaryPlaceholder=Must have less than 10000 chara
 applicant_request.title=My requests
 applicant_request.request=Request
 applicant_request.applicantState=Applicant state
-applicant_request.requestsAmount=Requests amount
+applicant_request.requestsAmount=Requests amount:
 
 employee_applicant_request.title=Applicant request
 employee_applicant_request.requestNotActiveValue=(processed)
