--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -36,6 +36,8 @@ button.back=Back
 button.home=Home
 button.save=Save
 button.upload=Upload
+button.createInterviewResult=Create interview result
+button.scheduleTechnicalInterview=Schedule a technical interview
 
 login.title=Login
 login.inputEmail=Email
