prepare jsp for new feature

--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -38,6 +38,7 @@ button.save=Save
 button.upload=Upload
 button.createInterviewResult=Create interview result
 button.scheduleTechnicalInterview=Schedule a technical interview
+button.schedule=Schedule
 
 login.title=Login
 login.inputEmail=Email
@@ -111,6 +112,15 @@ employee_applicant_request.applicantInterviewResults=Interview results
 employee_applicant_request.basicInterviewName=Basic interview
 employee_applicant_request.technicalInterviewName=Technical interview
 employee_applicant_request.interviewResultRating=Rating:
+
+interview_result_modal.title=Interview result creation
+interview_result_modal.inputComment=Write comment*
+interview_result_modal.inputRating=Input rating*
+interview_result_modal.inputRatingPlaceholder=From 1 to 10
+interview_result_modal.inputCommentPlaceholder=Must have less than 25000 characters
+
+schedule_technical_interview_modal.title=Schedule technical interview
+schedule_technical_interview_modal.inputDate=Input date
 
 table_action=Action
 
