--- a/src/main/resources/locale/page_content_ru_RU.properties
+++ b/src/main/resources/locale/page_content_ru_RU.properties
@@ -38,6 +38,7 @@ button.save=\u041F\u0440\u0438\u043C\u0435\u043D\u0438\u0442\u044C
 button.upload=\u0417\u0430\u0433\u0440\u0443\u0437\u0438\u0442\u044C
 button.createInterviewResult=\u0417\u0430\u0444\u0438\u043A\u0441\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0440\u0435\u0437\u0443\u043B\u044C\u0442\u0430\u0442 \u0438\u043D\u0442\u0435\u0440\u0432\u044C\u044E
 button.scheduleTechnicalInterview=\u041D\u0430\u0437\u043D\u0430\u0447\u0438\u0442\u044C \u0442\u0435\u0445\u043D\u0438\u0447\u0435\u0441\u043A\u043E\u0435 \u0438\u043D\u0442\u0435\u0440\u0432\u044C\u044E
+button.schedule=\u041D\u0430\u0437\u043D\u0430\u0447\u0438\u0442\u044C
 
 login.title=\u0412\u0445\u043E\u0434 \u0432 \u0430\u043A\u043A\u0430\u0443\u043D\u0442
 login.inputEmail=\u042D\u043B\u0435\u043A\u0442\u0440\u043E\u043D\u043D\u0430\u044F \u043F\u043E\u0447\u0442\u0430
@@ -109,8 +110,17 @@ employee_applicant_request.requestNotActiveValue=(\u043E\u0431\u0440\u0430\u0431
 employee_applicant_request.applicantSummary=\u0420\u0435\u0437\u044E\u043C\u0435
 employee_applicant_request.applicantInterviewResults=\u0420\u0435\u0437\u0443\u043B\u044C\u0442\u0430\u0442\u044B \u0438\u043D\u0442\u0435\u0440\u0432\u044C\u044E
 employee_applicant_request.basicInterviewName=\u041F\u0440\u0435\u0434\u0432\u0430\u0440\u0438\u0442\u0435\u043B\u044C\u043D\u043E\u0435 \u0438\u043D\u0442\u0435\u0440\u0432\u044C\u044E
-employee_applicant_request.technicalInterviewName=\u0422\u0435\u0445\u043D\u0438\u0447\u0435\u0441\u043A\u043E\u0435 \u0438\u043D\u0442\u0435\u0440\u0432\u044C\u044E
+employee_applicant_request.technicalInterviewName=\u0422\u0435\u0445\u043D\u0438\u0447\u0435\u0441\u043A\u043E\u0435 \u0441\u043E\u0431\u0435\u0441\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u0435
 employee_applicant_request.interviewResultRating=\u0420\u0435\u0439\u0442\u0438\u043D\u0433:
+
+interview_result_modal.title=\u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435 \u0440\u0435\u0437\u0443\u043B\u044C\u0442\u0430\u0442\u0430 \u0438\u043D\u0442\u0435\u0440\u0432\u044C\u044E
+interview_result_modal.inputComment=\u041D\u0430\u043F\u0438\u0448\u0438\u0442\u0435 \u043A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u0439*
+interview_result_modal.inputRating=\u041F\u043E\u0441\u0442\u0430\u0432\u044C\u0442\u0435 \u043E\u0446\u0435\u043D\u043A\u0443*
+interview_result_modal.inputRatingPlaceholder=\u041E\u0442 1 \u0434\u043E 10
+interview_result_modal.inputCommentPlaceholder=\u0414\u043E\u043B\u0436\u043D\u043E \u0431\u044B\u0442\u044C \u043D\u0435 \u0431\u043E\u043B\u0435\u0435 25000 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432
+
+schedule_technical_interview_modal.title=\u041D\u0430\u0437\u043D\u0430\u0447\u0438\u0442\u044C \u0442\u0435\u0445\u043D\u0438\u0447\u0435\u0441\u043A\u043E\u0435 \u0441\u043E\u0431\u0435\u0441\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u0435
+schedule_technical_interview_modal.inputDate=\u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0434\u0430\u0442\u0443
 
 table_action=\u0414\u0435\u0439\u0441\u0442\u0432\u0438\u0435
 
