add to jsp selecting of applicant state

--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -118,9 +118,15 @@ interview_result_modal.inputComment=Write comment*
 interview_result_modal.inputRating=Input rating*
 interview_result_modal.inputRatingPlaceholder=From 1 to 10
 interview_result_modal.inputCommentPlaceholder=Must have less than 25000 characters
+interview_result_modal.updateState=Update applicant state*
+interview_result_modal.inputState=Select applicant state
+
+interview_result_modal.applicantStateReadyForTechnicalInterview=Ready for technical interview
+interview_result_modal.applicantStatePassed=Passed
+interview_result_modal.applicantStateFailed=Failed
 
 schedule_technical_interview_modal.title=Schedule technical interview
-schedule_technical_interview_modal.inputDate=Input date
+schedule_technical_interview_modal.inputDate=Input date*
 
 table_action=Action
 
