--- a/src/main/resources/locale/page_content_ru_RU.properties
+++ b/src/main/resources/locale/page_content_ru_RU.properties
@@ -118,9 +118,15 @@ interview_result_modal.inputComment=\u041D\u0430\u043F\u0438\u0448\u0438\u0442\u
 interview_result_modal.inputRating=\u041F\u043E\u0441\u0442\u0430\u0432\u044C\u0442\u0435 \u043E\u0446\u0435\u043D\u043A\u0443*
 interview_result_modal.inputRatingPlaceholder=\u041E\u0442 1 \u0434\u043E 10
 interview_result_modal.inputCommentPlaceholder=\u0414\u043E\u043B\u0436\u043D\u043E \u0431\u044B\u0442\u044C \u043D\u0435 \u0431\u043E\u043B\u0435\u0435 25000 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432
+interview_result_modal.updateState=\u041E\u0431\u043D\u043E\u0432\u0438\u0442\u0435 \u0441\u0442\u0430\u0442\u0443\u0441 \u0441\u043E\u0438\u0441\u043A\u0430\u0442\u0435\u043B\u044F*
+interview_result_modal.inputState=\u0412\u044B\u0431\u0440\u0430\u0442\u044C \u0441\u0442\u0430\u0442\u0443\u0441 \u0441\u043E\u0438\u0441\u043A\u0430\u0442\u0435\u043B\u044F
 
-schedule_technical_interview_modal.title=\u041D\u0430\u0437\u043D\u0430\u0447\u0438\u0442\u044C \u0442\u0435\u0445\u043D\u0438\u0447\u0435\u0441\u043A\u043E\u0435 \u0441\u043E\u0431\u0435\u0441\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u0435
-schedule_technical_interview_modal.inputDate=\u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0434\u0430\u0442\u0443
+interview_result_modal.applicantStateReadyForTechnicalInterview=\u0413\u043E\u0442\u043E\u0432 \u043A \u0442\u0435\u0445\u043D\u0438\u0447\u0435\u0441\u043A\u043E\u043C\u0443 \u0441\u043E\u0431\u0435\u0441\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u044E
+interview_result_modal.applicantStatePassed=\u041F\u043E\u0434\u0445\u043E\u0434\u0438\u0442
+interview_result_modal.applicantStateFailed=\u041F\u0440\u043E\u0432\u0430\u043B\u0438\u043B\u0441\u044F
+
+schedule_technical_interview_modal.title=\u041D\u0430\u0437\u043D\u0430\u0447\u0438\u0442\u044C \u0442\u0435\u0445\u043D\u0438\u0447\u0435\u0441\u043A\u043E\u0435 \u0441\u043E\u0431\u0435\u0441\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u0435*
+schedule_technical_interview_modal.inputDate=\u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0434\u0430\u0442\u0443*
 
 table_action=\u0414\u0435\u0439\u0441\u0442\u0432\u0438\u0435
 
