--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -45,7 +45,7 @@ login.inputEmail=Email
 login.inputPassword=Password
 
 header.home=Home
-header.vacancy=Vacancy
+header.vacancy=Vacancies
 header.register=Register
 header.login=Login
 header.logout=Logout
