--- a/src/main/resources/locale/page_content_ru_RU.properties
+++ b/src/main/resources/locale/page_content_ru_RU.properties
@@ -125,7 +125,7 @@ interview_result_modal.applicantStateReadyForTechnicalInterview=\u0413\u043E\u04
 interview_result_modal.applicantStatePassed=\u041F\u043E\u0434\u0445\u043E\u0434\u0438\u0442
 interview_result_modal.applicantStateFailed=\u041F\u0440\u043E\u0432\u0430\u043B\u0438\u043B\u0441\u044F
 
-schedule_technical_interview_modal.title=\u041D\u0430\u0437\u043D\u0430\u0447\u0438\u0442\u044C \u0442\u0435\u0445\u043D\u0438\u0447\u0435\u0441\u043A\u043E\u0435 \u0441\u043E\u0431\u0435\u0441\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u0435*
+schedule_technical_interview_modal.title=\u041D\u0430\u0437\u043D\u0430\u0447\u0438\u0442\u044C \u0442\u0435\u0445\u043D\u0438\u0447\u0435\u0441\u043A\u043E\u0435 \u0441\u043E\u0431\u0435\u0441\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u0435
 schedule_technical_interview_modal.inputDate=\u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0434\u0430\u0442\u0443*
 
 table_action=\u0414\u0435\u0439\u0441\u0442\u0432\u0438\u0435
