add techncial interview scheduling

--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -112,6 +112,7 @@ employee_applicant_request.applicantInterviewResults=Interview results
 employee_applicant_request.basicInterviewName=Basic interview
 employee_applicant_request.technicalInterviewName=Technical interview
 employee_applicant_request.interviewResultRating=Rating:
+employee_applicant_request.technicalInterviewDate=Technical interview date
 
 interview_result_modal.title=Interview result creation
 interview_result_modal.inputComment=Write comment*
@@ -119,7 +120,6 @@ interview_result_modal.inputRating=Input rating*
 interview_result_modal.inputRatingPlaceholder=From 1 to 10
 interview_result_modal.inputCommentPlaceholder=Must have less than 25000 characters
 interview_result_modal.updateState=Update applicant state*
-interview_result_modal.inputState=Select applicant state
 
 interview_result_modal.applicantStateReadyForTechnicalInterview=Ready for technical interview
 interview_result_modal.applicantStatePassed=Passed
