--- a/src/main/resources/locale/page_content_ru_RU.properties
+++ b/src/main/resources/locale/page_content_ru_RU.properties
@@ -112,6 +112,7 @@ employee_applicant_request.applicantInterviewResults=\u0420\u0435\u0437\u0443\u0
 employee_applicant_request.basicInterviewName=\u041F\u0440\u0435\u0434\u0432\u0430\u0440\u0438\u0442\u0435\u043B\u044C\u043D\u043E\u0435 \u0438\u043D\u0442\u0435\u0440\u0432\u044C\u044E
 employee_applicant_request.technicalInterviewName=\u0422\u0435\u0445\u043D\u0438\u0447\u0435\u0441\u043A\u043E\u0435 \u0441\u043E\u0431\u0435\u0441\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u0435
 employee_applicant_request.interviewResultRating=\u0420\u0435\u0439\u0442\u0438\u043D\u0433:
+employee_applicant_request.technicalInterviewDate=\u0414\u0430\u0442\u0430 \u0442\u0435\u0445\u043D\u0438\u0447\u0435\u0441\u043A\u043E\u0433\u043E \u0441\u043E\u0431\u0435\u0441\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u044F
 
 interview_result_modal.title=\u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435 \u0440\u0435\u0437\u0443\u043B\u044C\u0442\u0430\u0442\u0430 \u0438\u043D\u0442\u0435\u0440\u0432\u044C\u044E
 interview_result_modal.inputComment=\u041D\u0430\u043F\u0438\u0448\u0438\u0442\u0435 \u043A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u0439*
@@ -119,7 +120,6 @@ interview_result_modal.inputRating=\u041F\u043E\u0441\u0442\u0430\u0432\u044C\u0
 interview_result_modal.inputRatingPlaceholder=\u041E\u0442 1 \u0434\u043E 10
 interview_result_modal.inputCommentPlaceholder=\u0414\u043E\u043B\u0436\u043D\u043E \u0431\u044B\u0442\u044C \u043D\u0435 \u0431\u043E\u043B\u0435\u0435 25000 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432
 interview_result_modal.updateState=\u041E\u0431\u043D\u043E\u0432\u0438\u0442\u0435 \u0441\u0442\u0430\u0442\u0443\u0441 \u0441\u043E\u0438\u0441\u043A\u0430\u0442\u0435\u043B\u044F*
-interview_result_modal.inputState=\u0412\u044B\u0431\u0440\u0430\u0442\u044C \u0441\u0442\u0430\u0442\u0443\u0441 \u0441\u043E\u0438\u0441\u043A\u0430\u0442\u0435\u043B\u044F
 
 interview_result_modal.applicantStateReadyForTechnicalInterview=\u0413\u043E\u0442\u043E\u0432 \u043A \u0442\u0435\u0445\u043D\u0438\u0447\u0435\u0441\u043A\u043E\u043C\u0443 \u0441\u043E\u0431\u0435\u0441\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u044E
 interview_result_modal.applicantStatePassed=\u041F\u043E\u0434\u0445\u043E\u0434\u0438\u0442
