add deleting account and changing password to jsp

--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -39,6 +39,7 @@ button.upload=Upload
 button.createInterviewResult=Create interview result
 button.scheduleTechnicalInterview=Schedule a technical interview
 button.schedule=Schedule
+button.change=Change
 
 login.title=Login
 login.inputEmail=Email
@@ -81,7 +82,13 @@ profile.dateOfBirth=Date of birth
 profile.phoneNumber=Phone number
 profile.email=Email
 profile.editInfoTitle=Edit user info
+profile.deleteAccount=Delete account
+profile.changePassword=Change password
 profile.avatar=Avatar
+profile.inputCurrentPassword=Current password*
+profile.inputNewPassword=New password*
+profile.repeatNewPassword=Repeat new password*
+profile.deleteAccountMessage=Be careful, you won't be able to restore your account
 
 user.employeeVacancies=My vacancies
 user.profile=Profile
