add new feature

--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -40,6 +40,10 @@ button.createInterviewResult=Create interview result
 button.scheduleTechnicalInterview=Schedule a technical interview
 button.schedule=Schedule
 button.change=Change
+button.seeAllUsers=All users
+button.users=Users
+button.activeUsers=Active users
+button.deletedUsers=Deleted users
 
 login.title=Login
 login.inputEmail=Email
@@ -50,10 +54,8 @@ header.vacancy=Vacancies
 header.register=Register
 header.login=Login
 header.logout=Logout
-header.admin=Admin
+header.adminUsers=Users management
 header.changeLanguage=Language
-header.russianLanguage= Russian
-header.englishLanguage= English
 header.title=Header
 
 home.title=Home
@@ -90,7 +92,7 @@ profile.inputNewPassword=New password*
 profile.repeatNewPassword=Repeat new password*
 profile.deleteAccountMessage=Be careful, you won't be able to restore your account
 
-user.employeeVacancies=My vacancies
+user.employeeVacancies=Vacancies management
 user.profile=Profile
 user.requests=My requests
 
@@ -134,6 +136,9 @@ interview_result_modal.applicantStateFailed=Failed
 
 schedule_technical_interview_modal.title=Schedule technical interview
 schedule_technical_interview_modal.inputDate=Input date*
+
+user_list.title=User list
+user_list_usersAmount=Users amount:
 
 table_action=Action
 
