add user blocking to admin

--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -44,6 +44,9 @@ button.seeAllUsers=All users
 button.users=Users
 button.activeUsers=Active users
 button.deletedUsers=Deleted users
+button.block=Block
+button.changeRole=Change role
+button.unblock=Unblock
 
 login.title=Login
 login.inputEmail=Email
@@ -139,6 +142,13 @@ schedule_technical_interview_modal.inputDate=Input date*
 
 user_list.title=User list
 user_list_usersAmount=Users amount:
+
+user_info.title=User info
+user_info.roleApplicant=Applicant
+user_info.roleEmployee=Employee
+user_info.roleAdmin=Admin
+user_info_change_user_role_modal.selectRole=Select user role
+user_deleted=(blocked)
 
 table_action=Action
 
