--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -150,6 +150,7 @@ user_info.roleAdmin=Admin
 user_info_change_user_role_modal.selectRole=Select user role
 user_info.role=Role
 user_deleted=(blocked)
+user_isActive=Active
 
 table_action=Action
 
