--- a/src/main/resources/locale/page_content_ru_RU.properties
+++ b/src/main/resources/locale/page_content_ru_RU.properties
@@ -150,6 +150,7 @@ user_info.roleAdmin=\u0410\u0434\u043C\u0438\u043D
 user_info_change_user_role_modal.selectRole=\u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0440\u043E\u043B\u044C
 user_info.role=\u0420\u043E\u043B\u044C
 user_deleted=(\u0437\u0430\u0431\u043B\u043E\u043A\u0438\u0440\u043E\u0432\u0430\u043D)
+user_isActive=\u0410\u043A\u0442\u0438\u0432\u043D\u044B\u0439
 
 table_action=\u0414\u0435\u0439\u0441\u0442\u0432\u0438\u0435
 
