prepare jsp for user report creation

--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -62,12 +62,17 @@ header.changeLanguage=Language
 header.title=Header
 
 home.title=Home
-home.seeVacanciesMessage=See vacancies
+home.seeVacanciesMessage=See vacancies and choose the most suitable one
 home.registerAndApplyVacanciesMessage=Register and apply vacancies
 home.getJobMessage=Get job offer and work with us
-home.firstSlideName =Step #1
-home.secondSlideName =Step #2
-home.thirdSlideName =Step #3
+home.firstSlideName=Step #1
+home.secondSlideName=Step #2
+home.thirdSlideName=Step #3
+home.userReportTitle=Report
+home.userReportInputSubject=Input subject*
+home.userReportInputSubjectPlaceholder=Must have less than 100 characters
+home.userReportInputComment=Input comment*
+home.userReportInputCommentPlaceholder=Must have less than 25000 characters
 
 vacancy.title=Vacancies
 vacancy_info.title=Vacancy
