add admin user report list view

--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -47,6 +47,10 @@ button.deletedUsers=Deleted users
 button.block=Block
 button.changeRole=Change role
 button.unblock=Unblock
+button.seeAllReports=All reports
+button.reports=Reports
+button.activeReports=Active reports
+button.notActiveReports=Not active reports
 
 login.title=Login
 login.inputEmail=Email
@@ -60,6 +64,7 @@ header.logout=Logout
 header.adminUsers=Users management
 header.changeLanguage=Language
 header.title=Header
+header.adminUserReports=Reports management
 
 home.title=Home
 home.seeVacanciesMessage=See vacancies and choose the most suitable one
@@ -156,6 +161,12 @@ user_info_change_user_role_modal.selectRole=Select user role
 user_info.role=Role
 user_deleted=(blocked)
 user_isActive=Active
+
+user_report_list.title=Reports list
+user_report_list.reportsAmount=Reports amount:
+user_report_list.subject=Subject
+user_report_list.creationDate=Creation date
+user_report_list.available=Available
 
 table_action=Action
 
