add user report view

--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -51,6 +51,8 @@ button.seeAllReports=All reports
 button.reports=Reports
 button.activeReports=Active reports
 button.notActiveReports=Not active reports
+button.userInfo=To user info
+button.createReportResponse=Create response
 
 login.title=Login
 login.inputEmail=Email
@@ -167,6 +169,14 @@ user_report_list.reportsAmount=Reports amount:
 user_report_list.subject=Subject
 user_report_list.creationDate=Creation date
 user_report_list.available=Available
+
+user_report_info.title=User report
+user_report_info.processed=(processed)
+user_report_info.comment=Comment
+user_report_info.response=Response
+user_report_info.userEmail=User email
+user_report_info.userRole=User role
+user_report_info.creationDate=Creation date
 
 table_action=Action
 
