--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -53,6 +53,8 @@ button.activeReports=Active reports
 button.notActiveReports=Not active reports
 button.userInfo=To user info
 button.createReportResponse=Create response
+button.backToUserList=Back to users
+button.backToReportList=Back to report
 
 login.title=Login
 login.inputEmail=Email
