add response creating

--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -179,6 +179,9 @@ user_report_info.response=Response
 user_report_info.userEmail=User email
 user_report_info.userRole=User role
 user_report_info.creationDate=Creation date
+user_report_info.reportCreation=Report creation
+user_report_info.inputResponse=Input response*
+user_report_info.inputResponsePlaceholder=Must have less than 25000 characters
 
 table_action=Action
 
