change jsp view

--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -161,7 +161,7 @@ user_info.title=User info
 user_info.roleApplicant=Applicant
 user_info.roleEmployee=Employee
 user_info.roleAdmin=Admin
-user_info_change_user_role_modal.selectRole=Select user role
+user_info_change_user_role_modal.selectRole=Select user role*
 user_info.role=Role
 user_deleted=(blocked)
 user_isActive=Active
