--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -71,7 +71,7 @@ header.title=Header
 header.adminUserReports=Reports management
 
 home.title=Home
-home.seeVacanciesMessage=See vacancies and choose the most suitable one
+home.seeVacanciesMessage=See vacancies and choose
 home.registerAndApplyVacanciesMessage=Register and apply vacancies
 home.getJobMessage=Get job offer and work with us
 home.firstSlideName=Step #1
