--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -82,6 +82,7 @@ home.userReportInputSubject=Input subject*
 home.userReportInputSubjectPlaceholder=Must have less than 100 characters
 home.userReportInputComment=Input comment*
 home.userReportInputCommentPlaceholder=Must have less than 25000 characters
+home.projectName=HR-SYSTEM
 
 vacancy.title=Vacancies
 vacancy_info.title=Vacancy
