change button text

--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -55,6 +55,7 @@ button.userInfo=To user info
 button.createReportResponse=Create response
 button.backToUserList=Back to users
 button.backToReportList=Back to report
+button.hide=Collapse/expand
 
 login.title=Login
 login.inputEmail=Email
