add user role translation

--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -70,6 +70,9 @@ header.adminUsers=Users management
 header.changeLanguage=Language
 header.title=Header
 header.adminUserReports=Reports management
+header.adminRole=admin
+header.employeeRole=employee
+header.applicantRole=applicant
 
 home.title=Home
 home.seeVacanciesMessage=See vacancies and choose
