add success message

--- a/src/main/resources/locale/page_content.properties
+++ b/src/main/resources/locale/page_content.properties
@@ -194,6 +194,8 @@ link.moreInfo=More information
 
 employee_vacancy_list.title=My vacancies
 
+successMessage=Successfully completed
+
 404_error.title=404 error
 404_error.message=404 page not found
 
